Melhoras no  login ,css,js

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,8 +1,9 @@
 body {
-    background: #f0f2f5;
+    background: #7aaaf2;
     font-family: Arial, sans-serif;
     text-align: center;
     margin-top: 80px;
+
 }
 
 h1 {
